--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -33,6 +33,9 @@
     <data-tables-api.version>1.10.23-3</data-tables-api.version>
     <echarts-api.version>4.9.0-4</echarts-api.version>
     <popper-api.version>1.16.1-2</popper-api.version>
+    <jquery3-api.version>3.5.1-3</jquery3-api.version>
+    <bootstrap4-api.version>4.6.0-2</bootstrap4-api.version>
+    <font-awesome-api.version>5.15.2-2</font-awesome-api.version>
 
     <git-plugin.version>4.6.0</git-plugin.version>
     <git-client.version>3.6.0</git-client.version>
