--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -143,6 +143,10 @@
       <artifactId>plugin-util-api</artifactId>
       <version>${plugin-util-api.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>branch-api</artifactId>
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
