--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -12,13 +12,13 @@
   <groupId>io.jenkins.plugins</groupId>
   <packaging>hpi</packaging>
   <name>Git Forensics Plugin</name>
-  <version>1.2.0</version>
+  <version>${revision}${changelist}</version>
 
   <description>Jenkins plug-in that mines and analyzes data from a Git repository.</description>
   <url>https://github.com/jenkinsci/git-forensics-plugin</url>
 
   <properties>
-    <revision>1.2.0</revision>
+    <revision>1.3.0</revision>
     <changelist>-SNAPSHOT</changelist>
 
     <module.name>${project.groupId}.git.forensics</module.name>
@@ -241,7 +241,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v1.2.0</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
