Remove package-lock.json.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+node
 node_modules
 target
 *.iml
 .classpath
+.project
+.settings
 pom.xml.versionsBackup
 pom.xml.releaseBackup
 release.properties
 .DS_Store
-.idea/
+/package-lock.json
