--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,21 +25,10 @@
 
     <!-- Library Dependencies Versions -->
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
-
-    <!-- Jenkins Plugin Dependencies Versions -->
-    <forensics-api-plugin.version>1.3.1</forensics-api-plugin.version>
+    <echarts-api.version>5.2.1-2</echarts-api.version>
     <plugin-util-api.version>2.5.0</plugin-util-api.version>
-    <data-tables-api.version>1.11.2-1</data-tables-api.version>
-    <jquery3-api.version>3.6.0-2</jquery3-api.version>
-    <font-awesome-api.version>5.15.4-1</font-awesome-api.version>
-    <echarts-api.version>5.1.2-11</echarts-api.version>
-    <bootstrap5-api.version>5.1.1-1</bootstrap5-api.version>
-    <credentials.version>2.6.1</credentials.version>
-
-    <git-plugin.version>4.6.0</git-plugin.version>
-    <git-client.version>3.6.0</git-client.version>
-    <scm-api.version>2.6.4</scm-api.version>
-
+    <data-tables-api.version>1.11.3-1</data-tables-api.version>
+    <forensics-api-plugin.version>1.5.0</forensics-api-plugin.version>
     <j2html.version>1.4.0</j2html.version>
     <streamex.version>0.7.3</streamex.version>
   </properties>
@@ -62,44 +51,14 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>git-client</artifactId>
-        <version>${git-client.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>credentials</artifactId>
-        <version>${credentials.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>script-security</artifactId>
-        <version>1.78</version>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>plugin-util-api</artifactId>
+        <version>${plugin-util-api.version}</version>
       </dependency>
       <dependency>
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>echarts-api</artifactId>
         <version>${echarts-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.jenkins.plugins</groupId>
-        <artifactId>bootstrap5-api</artifactId>
-        <version>${bootstrap5-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.jenkins.plugins</groupId>
-        <artifactId>font-awesome-api</artifactId>
-        <version>${font-awesome-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.jenkins.plugins</groupId>
-        <artifactId>jquery3-api</artifactId>
-        <version>${jquery3-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>trilead-api</artifactId>
-        <version>1.0.13</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -132,7 +91,6 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
-      <version>${git-plugin.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
@@ -142,7 +100,6 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
-      <version>${plugin-util-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -204,16 +161,14 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
-      <version>${git-plugin.version}</version>
+      <classifier>tests</classifier>
       <scope>test</scope>
-      <type>test-jar</type>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>scm-api</artifactId>
-      <version>${scm-api.version}</version>
+      <classifier>tests</classifier>
       <scope>test</scope>
-      <type>test-jar</type>
     </dependency>
 
   </dependencies>
