--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -16,8 +16,18 @@
   <name>UI Tests of Git Forensics Plugin</name>
 
   <properties>
-    <jenkins.version>2.303.2</jenkins.version>
+    <jenkins.version>2.303.3</jenkins.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jenkins-ci.main</groupId>
+        <artifactId>jenkins-core</artifactId>
+        <version>2.303.3</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <!-- Jenkins Plugin Dependencies -->
