--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -26,6 +26,7 @@
     <!-- Library Dependencies Versions -->
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
     <echarts-api.version>5.2.2-1</echarts-api.version>
+    <font-awesome-api.version>5.15.4-3</font-awesome-api.version>
     <plugin-util-api.version>2.5.1</plugin-util-api.version>
     <data-tables-api.version>1.11.3-1</data-tables-api.version>
     <forensics-api-plugin.version>1.7.0</forensics-api-plugin.version>
@@ -96,6 +97,11 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
       <version>${forensics-api-plugin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>font-awesome-api</artifactId>
+      <version>${font-awesome-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
