--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -27,11 +27,12 @@
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
     <echarts-api.version>5.3.0-2</echarts-api.version>
     <font-awesome-api.version>6.0.0-1</font-awesome-api.version>
-    <plugin-util-api.version>2.14.0</plugin-util-api.version>
+    <plugin-util-api.version>2.15.0-rc470.b4bb738647b7</plugin-util-api.version>
     <data-tables-api.version>1.11.4-3</data-tables-api.version>
     <forensics-api-plugin.version>1.12.0</forensics-api-plugin.version>
     <bootstrap5-api.version>5.1.3-6</bootstrap5-api.version>
     <streamex.version>0.8.1</streamex.version>
+    <testcontainers.version>1.16.3</testcontainers.version>
   </properties>
 
   <licenses>
@@ -159,18 +160,27 @@
       <type>test-jar</type>
     </dependency>
 
-    <!-- GitSampleRepoRule -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>git</artifactId>
-      <classifier>tests</classifier>
+      <artifactId>ssh-credentials</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>scm-api</artifactId>
-      <classifier>tests</classifier>
+      <artifactId>ssh-slaves</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
