--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -28,10 +28,11 @@
     <echarts-api.version>5.3.2-1</echarts-api.version>
     <font-awesome-api.version>6.0.0-1</font-awesome-api.version>
     <plugin-util-api.version>2.16.0</plugin-util-api.version>
-    <data-tables-api.version>1.11.4-3</data-tables-api.version>
+    <data-tables-api.version>1.11.4-4</data-tables-api.version>
     <forensics-api-plugin.version>1.13.0</forensics-api-plugin.version>
     <bootstrap5-api.version>5.1.3-6</bootstrap5-api.version>
     <testcontainers.version>1.17.1</testcontainers.version>
+    <jquery3-api.version>3.6.0-3</jquery3-api.version>
   </properties>
 
   <licenses>
@@ -65,6 +66,11 @@
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>bootstrap5-api</artifactId>
         <version>${bootstrap5-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>jquery3-api</artifactId>
+        <version>${jquery3-api.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
