--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -169,6 +169,14 @@
           <entryPointClassPackage>io.jenkins.plugins.forensics.git.assertions</entryPointClassPackage>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.revapi</groupId>
+        <artifactId>revapi-maven-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
   <scm>
