Ignore access problems due to JDK17 module restrictions.
Fixes access problems for
- XStream during Jenkins serialization
- Annotation processing in UI tests configuration with Guice

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -18,6 +18,9 @@
   <properties>
     <jenkins.version>2.363</jenkins.version>
     <module.name>${project.groupId}.git.forensics.ui.tests</module.name>
+
+    <!-- Maven Surefire ArgLine -->
+    <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
   </properties>
 
   <dependencyManagement>
