--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -21,6 +21,14 @@
     <revision>1.12.0</revision>
     <changelist>-SNAPSHOT</changelist>
 
+    <jenkins.baseline>2.361</jenkins.baseline>
+    <jenkins.version>2.361.4</jenkins.version>
+    <jdk>11</jdk>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.testRelease>11</maven.compiler.testRelease>
+
     <module.name>${project.groupId}.git.forensics</module.name>
 
     <!-- Library Dependencies Versions -->
@@ -46,6 +54,16 @@
     </developer>
   </developers>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>git-client</artifactId>
+        <version>4.0.0-rc3319.9a_f9cb_53e5da</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <!-- Project Dependencies -->
     <dependency>
@@ -63,6 +81,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
+      <version>5.0.0-rc5167.b_a_089575e15d</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
@@ -182,7 +201,7 @@
     <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v1.6.0</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
