--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>6.1.0</version>
+    <version>6.2.0</version>
     <relativePath />
   </parent>
 
@@ -30,8 +30,14 @@
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
-    <forensics-api.version>2.0.0-rc1381.02e905b_3cb_b_2</forensics-api.version>
-    <plugin-util-api.version>3.0.0-rc676.39c5d554b_82f</plugin-util-api.version>
+    <forensics-api.version>2.0.0</forensics-api.version>
+    <jquery3-api.version>3.6.3-1</jquery3-api.version>
+    <plugin-util-api.version>3.0.0</plugin-util-api.version>
+    <bootstrap5-api.version>5.2.2-1</bootstrap5-api.version>
+    <font-awesome-api.version>6.3.0-1</font-awesome-api.version>
+    <data-tables-api.version>1.13.3-1</data-tables-api.version>
+    <echarts-api.version>5.4.0-2</echarts-api.version>
+
   </properties>
 
   <licenses>
@@ -48,6 +54,31 @@
       <email>ullrich.hafner@gmail.com</email>
     </developer>
   </developers>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>echarts-api</artifactId>
+        <version>${echarts-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>bootstrap5-api</artifactId>
+        <version>${bootstrap5-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>jquery3-api</artifactId>
+        <version>${jquery3-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>data-tables-api</artifactId>
+        <version>${data-tables-api.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <!-- Project Dependencies -->
@@ -75,7 +106,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>font-awesome-api</artifactId>
-      <version>6.2.0-3</version>
+      <version>${font-awesome-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
