--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -160,6 +160,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>data-tables-api</artifactId>
+      <version>${data-tables-api.version}</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
