--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>1.118</version>
+      <version>5504.v485694f31cdf</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
