--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -43,11 +43,16 @@
   </dependencyManagement>
 
   <dependencies>
-    <!-- Jenkins Plugin Dependencies -->
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
       <version>5588.vd13b_52985008</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
