--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        jdk: [17]
-        include:
-          - platform: ubuntu-latest
-            jdk: 11
-          - platform: macos-latest
-            jdk: 11
+        jdk: [17, 21]
 
     runs-on: ${{ matrix.platform }}
     name: on ${{ matrix.platform }} with JDK ${{ matrix.jdk }}
@@ -32,5 +27,11 @@ jobs:
           java-version: '${{ matrix.jdk }}'
           check-latest: true
           cache: 'maven'
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4
+        with:
+          maven-version: 3.9.5
       - name: Build with Maven
+        env:
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp clean verify --file pom.xml '-Djenkins.test.timeout=5000' '-Dgpg.skip'
