--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,28 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <hpi-plugin.version>3.48</hpi-plugin.version>
+    <scmTag>HEAD</scmTag>
+
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
+
+  <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
+    <connection>scm:git:https://github.com/jenkinsci/git-forensics-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/git-forensics-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/git-forensics-plugin</url>
+    <tag>${scmTag}</tag>
+  </scm>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <build>
     <plugins>
@@ -29,6 +48,11 @@
         <configuration>
           <skip>true</skip>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>${hpi-plugin.version}</version>
       </plugin>
     </plugins>
     <pluginManagement>
