--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -111,7 +111,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <reuseForks>false</reuseForks>
-              <trimStackTrace>false</trimStackTrace>
+              <trimStackTrace>false</trimStackTrace> <!-- SUREFIRE-1798 -->
               <environmentVariables>
                 <PLUGINS_DIR>../plugin/target/test-classes/test-dependencies</PLUGINS_DIR>
                 <JENKINS_VERSION>${jenkins.version}</JENKINS_VERSION>
