--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -87,6 +87,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
+      <version>2.3.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
