--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -1,11 +1,8 @@
 title.referenceJob=Reference Job
-description.referenceJob=A reference job defines the baseline for tools that want to create relative build reports.
-title.scm=SCM Key
-description.scm=Specify the key of your repository (substring is sufficient) if you are using multiple SCMs in your job.
-title.maxCommits=#Commits
-description.maxCommits=Defines how many commits of a job's Git history should be evaluated to find the reference build.
-title.defaultBranch=Default Branch
-description.defaultBranch=The default branch to use as reference job for multi-branch pipelines. If empty then `master` \
-   will be used.
-title.skipUnknownCommits=Ignore builds with commits that are not part of the current build
-title.latestBuildIfNotFound=Fallback to latest build if no reference build has been found
+description.referenceJob=Baseline job for plugins that want to create relative build reports
+title.scm=Source Control Repository Key
+title.maxCommits=# Commits
+description.maxCommits=Defines how many commits of a job''s Git history should be evaluated to find the reference build.
+title.targetBranch=Target Branch
+title.skipUnknownCommits=Ignore reference job builds with commits that are not part of the current build
+title.latestBuildIfNotFound=Fallback to the latest-completed build if no reference build has been found
