--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,6 +30,7 @@
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
+    <forensics-api.version>2.4.0-rc1560.b_4b_993ec6a_9f</forensics-api.version>
   </properties>
 
   <licenses>
@@ -68,7 +69,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
-      <version>2.4.0-rc1537.c883d772f417</version>
+      <version>${forensics-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
