[JENKINS-73380] Add an option to consider running builds as reference.

--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -6,3 +6,4 @@ description.maxCommits=Defines how many commits of a job''s Git history should b
 title.targetBranch=Target Branch
 title.skipUnknownCommits=Ignore reference job builds with commits that are not part of the current build
 title.latestBuildIfNotFound=Fallback to the latest-completed build if no reference build has been found
+title.considerRunningBuild=Consider running builds as reference
