--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -14,7 +14,7 @@ jobs:
         browser: [ firefox-container, chrome-container ]
 
     runs-on: [ubuntu-latest]
-    name: '${{ matrix.browser }}
+    name: ${{ matrix.browser }}
 
     steps:
       - uses: actions/checkout@v4
