--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -29,10 +29,10 @@ jobs:
         uses: stCarolas/setup-maven@v5
         with:
           maven-version: 3.9.9
-      - name: Build warnings plugin and download dependencies
+      - name: Build got-forensics plugin and download dependencies
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml
       - name: Run UI tests on ${{ matrix.browser }}
         env:
           BROWSER: ${{ matrix.browser }}
           SKIP_UPDATES: 'true'
-        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dquite -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
