--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>git-forensics-parent</artifactId>
   <packaging>pom</packaging>
-  <version>UNVERSIONED</version>
+  <version>${changelist}</version>
 
   <name>Aggregator for Git Forensics Plugin</name>
 
@@ -16,7 +16,6 @@
   <properties>
     <java.version>1.8</java.version>
     <hpi-plugin.version>3.59</hpi-plugin.version>
-    <scmTag>HEAD</scmTag>
 
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
