--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -67,6 +67,8 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
+      <!-- TODO: remove the version when a matching BOM is available -->
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
@@ -75,7 +77,8 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
-      <version>6.0.0-rc1031.7a_4203d33c1f</version>
+      <!-- TODO: remove the version when a matching BOM is available -->
+      <version>6.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -86,6 +89,8 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
+      <!-- TODO: remove the version when a matching BOM is available -->
+      <version>3.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
@@ -116,6 +121,8 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
+      <!-- TODO: remove the version when a matching BOM is available -->
+      <version>6.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
