--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -72,6 +72,7 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
       <!-- TODO: remove the version when a matching BOM is available -->
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
@@ -81,6 +82,7 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
       <!-- TODO: remove the version when a matching BOM is available -->
+      <version>6.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -92,6 +94,7 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>forensics-api</artifactId>
       <!-- TODO: remove the version when a matching BOM is available -->
+      <version>3.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
@@ -123,6 +126,7 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
       <!-- TODO: remove the version when a matching BOM is available -->
+      <version>6.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
